--- a/StepSync/Resources/Info.plist
+++ b/StepSync/Resources/Info.plist
@@ -42,5 +42,9 @@
 		<string>location</string>
 		<string>remote-notification</string>
 	</array>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
+	<key>NSSupportsLiveActivitiesFrequentUpdates</key>
+	<true/>
 </dict>
 </plist>
